# aiogram3.0-mongodb

./: .gitignore  pyproject.toml
src/: bot.py  config.py  db.py  schemas.py
src/application/ports/usecase/: salary.py
src/domain/const/: error.py
src/domain/dto/: db.py  query.py  salary.py
src/domain/interfaces/: base_repo.py
src/domain/interfaces/repositories/: base_repo.py  salary.py
src/domain/interfaces/usecase/: __init__.py  base_salary_usecase.py
src/handlers/: filter_data.py
src/infrastracture/adapters/db/: main.py
src/infrastracture/adapters/db/middleware/: __init__.py
src/infrastracture/adapters/db/repositories/: salary.py
src/infrastracture/adapters/queries/: salary.py
src/infrastracture/db/: db_query.py
src/infrastracture/db/middleware/: db_middleware.py
src/infrastracture/db/repositories/: __init__.py  salary.py
src/presentation/: main.py
src/presentation/di/providers/: services.py
src/presentation/handlers/: __init__.py  salary_aggregate.py
src/presentation/middleware/: db_middleware.py
